[package]
name = "rsah"
version = "0.1.0"
edition = "2021"
authors = [
    "Alex Sima <alexsima203@gmail.com>",
    "Baldovin Razvan <razvanmihai1337@yahoo.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["graphic"]
# TODO: aplicatie si fara modul grafic
graphic = ["ggez", "egui", "ggez-egui"]

[dependencies]
ggez = {version = "^0.7.0", optional = true}
egui = {version = "^0.16.1", optional = true}
ggez-egui = {version = "^0.1.7", optional = true}
lazy_static = "^1.4.0"
regex = "^1.5.5"
rand = "^0.3.0"
