[package]
name = "rsah"
version = "1.0.0"
edition = "2021"
authors = [
    "Sima Alexandru <alexsima203@gmail.com>",
    "Baldovin Razvan <razvanmihai1337@yahoo.com>"
]
description = "Un joc de sah scris in rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "^0.16.1"
ggez = "^0.7.0"
ggez-egui = "^0.1.7"
lazy_static = "^1.4.0"
rand = "^0.3.5"
regex = "^1.5.5"
serde = {version = "^1.0.136", features = ["derive"]}
serde_json = "1.0.79"